# ============================================================================
# uffs-polars: Polars Facade Crate
# ============================================================================
#
# SPDX-License-Identifier: MPL-2.0
# Copyright (c) 2025-2026 SKY, LLC.
#
# This crate exists for compilation time isolation. Polars is a heavy
# dependency that takes ~4 minutes to compile. By isolating it here,
# changes to other crates don't trigger Polars recompilation.
#
# All other crates depend on this instead of Polars directly.
#
# NOTE: Polars is pinned to a specific main branch commit for deterministic builds.
#       Run `just polars` to bump to the latest main HEAD.
#       This avoids surprise recompiles while keeping upgrades intentional.
# ============================================================================

[package]
name = "uffs-polars"
description = "Polars facade for UFFS (Ultra Fast File Search) - compilation isolation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

# Phase R6 of `release-automation-plan.md` step 3 — docs.rs build config.
# `all-features = true` is acceptable here because all `[features]` below
# are additive and pull non-conflicting polars feature flags.  See
# `uffs-time/Cargo.toml` for the rationale on `--cfg docsrs`.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "uffs_polars"
path = "src/lib.rs"
# Disable doc-tests and unit tests: this is a facade crate that re-exports polars.
# Doc-tests/tests fail because rustdoc/clippy sometimes compile separately and
# can't resolve the git-dependency polars crate in certain CI configurations.
doctest = false
test = false

# ──────────────────────────────────────────────────────────────────────────────
# POLARS SOURCE COMPILATION (ISOLATED HERE)
# ──────────────────────────────────────────────────────────────────────────────
[dependencies]
# ONLY Polars — all other dependencies provided by consuming crates.
# Pinned to a specific commit on main. Bump via: just polars
#
# `version = "0.53.0"` is REQUIRED in addition to `git/rev` so that
# `cargo package` (invoked by release-plz `update`) can validate this
# manifest.  Without `version =`, cargo refuses to package any crate
# that has unversioned dependencies (path, git, or otherwise).
#
# Local-build semantics: cargo uses the git/rev source.  The `version`
# field is a verification hint — cargo confirms the resolved git source
# claims a Cargo.toml version that satisfies the requirement (`= 0.53.0`
# matches the polars Cargo.toml at the pinned rev).
#
# Publish semantics (R8+ when `uffs-polars` ships to crates.io): cargo
# strips the `git/rev` and emits only `polars = "0.53.0"`.  Consumers
# installing `uffs-polars` from crates.io get crates.io polars 0.53.0,
# NOT our pinned rev.  This is a known divergence — the rev pin exists
# for deterministic in-workspace builds with the specific feature set
# below; published consumers fall back to whatever 0.53.0 features
# crates.io polars exposes.  R8 dress rehearsal will surface any
# real-world incompatibility (most likely we'd flip to a published
# polars version then or mark `uffs-polars` `publish = false`).
polars = { git = "https://github.com/pola-rs/polars", rev = "1e9a63b95923291cd8849d70d96b8cec4e96da6a", version = "0.53.0", default-features = false, features = [
  # ===== Core =====
  "lazy",          # Lazy evaluation (query optimization)
  "new_streaming", # Streaming engine for large queries
  "performant",    # Internal performance optimizations
  "serde",         # Serialization (compact index wire format)
  "nightly",       # Nightly Rust features
  "simd",          # SIMD vectorization

  # ===== Data Types (replaces blanket "dtype-full") =====
  "dtype-u8",       # UInt8  — flags column
  "dtype-u16",      # UInt16 — flags column
  "dtype-datetime", # Datetime — timestamps
  "dtype-array",    # Required by Polars internals (match exhaustiveness in polars-expr)

  # ===== String Operations =====
  "strings",   # .str() accessor — used throughout
  "regex",     # Regex pattern matching — core search
  "find_many", # .str().contains_any() — multi-literal pattern matching

  # ===== Temporal =====
  "temporal",  # Date/time casting (timestamps → Datetime)
  "timezones", # Required by Polars internals when temporal is enabled

  # ===== I/O Formats =====
  "parquet", # Parquet read/write (primary persistence)
  "json",    # JSON export (CLI + MCP)
  "csv",     # CSV export (CLI)

  # ===== Query Operations =====
  "is_in",   # col.is_in([...]) — compiled_pattern
  "diff",    # .diff() — compact.rs
  "bitwise", # col("flags").bitand() — flags.rs
  "abs",     # Required by Polars internals (match exhaustiveness in polars-expr)

  # ===== Optimizer / Internal =====
  "fmt", # DataFrame Display formatting
] }

# ─────────────────────────────────────────────────────────────────────────────
# Lints (inherit from workspace)
# ─────────────────────────────────────────────────────────────────────────────
[lints]
workspace = true
