# ============================================================================
# uffs-text: Unicode Text Processing for UFFS
# ============================================================================
# Layer 0 Foundation crate. No internal crate dependencies.
#
# Provides NTFS-compatible case folding via the $UpCase table, trigram key
# helpers, and (future) Unicode normalisation, collation, and i18n support.
# ============================================================================

[package]
name = "uffs-text"
description = "Unicode text processing for UFFS: NTFS case folding, trigram keys, i18n foundation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

# Phase R6 of `release-automation-plan.md` step 3 — docs.rs build config.
# See `uffs-time/Cargo.toml` for the full rationale comment; intentionally
# kept short here since the pattern is uniform across all 12 publishable
# crates.  `all-features = true` + `--cfg docsrs` is the canonical setup.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bytemuck.workspace = true

[lints]
workspace = true
