# ============================================================================
# uffs-text: Unicode Text Processing for UFFS
# ============================================================================
# Layer 0 Foundation crate. No internal crate dependencies.
#
# Provides NTFS-compatible case folding via the $UpCase table, trigram key
# helpers, and (future) Unicode normalisation, collation, and i18n support.
# ============================================================================

[package]
name = "uffs-text"
description = "Unicode text processing for UFFS: NTFS case folding, trigram keys, i18n foundation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
# Per-crate keywords + categories override (Phase 1 §3.5 escape hatch
# via `KnownExceptions::keywords_override_ok` / `categories_override_ok`
# in `scripts/ci/manifest-audit/src/audit.rs`).  This crate ships
# NTFS-compatible case folding (and, in the future, Unicode
# normalisation / collation / search tokenisation) — useful to anyone
# building filename comparison logic that must agree with NTFS's own
# ordering bit-for-bit, not just to UFFS.  Workspace defaults skew
# heavily towards the app role and would mis-categorise this library.
# See issue #241 for the full discoverability rationale.
keywords = ["unicode", "ntfs", "case-folding", "i18n", "filename"]
categories = ["text-processing"]
# Explicitly publishable — overrides the workspace default `publish = false`
# set in root `Cargo.toml`'s `[workspace.package]`.  Member of the 5-crate
# publishable subset (`uffs-broker`, `uffs-broker-protocol`, `uffs-security`,
# `uffs-text`, `uffs-time`) per `release-automation-baseline.md` §10 row 5.
publish = true

# Phase R6 of `release-automation-plan.md` step 3 — docs.rs build config.
# See `uffs-time/Cargo.toml` for the full rationale comment; intentionally
# kept short here since the pattern is uniform across all 12 publishable
# crates.  `all-features = true` + `--cfg docsrs` is the canonical setup.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bytemuck.workspace = true

[lints]
workspace = true
