# ============================================================================
# uffs-time: NTFS FILETIME helpers
# ============================================================================
# Layer 0 Foundation crate.  No internal or external dependencies.
#
# Pure `const fn` arithmetic for converting Windows FILETIME (100-ns ticks
# since 1601-01-01) to calendar fields and applying timezone bias.
#
# Extracted from `uffs-mft` so the thin CLI can depend on these helpers
# without transitively linking tokio, polars, reqwest, or object_store.
# ============================================================================

[package]
name = "uffs-time"
description = "NTFS FILETIME arithmetic for UFFS (pure const fn, zero deps)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

# Phase R6 of `release-automation-plan.md` step 3: docs.rs build configuration.
# `all-features = true` ensures docs.rs renders the full public API surface.
# `rustdoc-args = ["--cfg", "docsrs"]` enables the `docsrs` cfg so platform-
# or feature-gated items can be doc-ifyed via `#[cfg_attr(docsrs, doc(cfg(...)))]`
# without affecting local `cargo doc`.  Inert until the crate is actually
# published — docs.rs reads it at build time.  See https://docs.rs/about/builds.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]

[lints]
workspace = true
